add validation batch size, remove torch, add accelerate install

--- a/nbs/03_model_main.ipynb
+++ b/nbs/03_model_main.ipynb
@@ -626,6 +626,7 @@
     "             lr_scheduler_type='cosine',  # The scheduler type to use. Including: linear, cosine, cosine_with_restarts, polynomial, constant, constant_with_warmup\n",
     "             warmup_ratio=0.1, # The warmup ratio for some lr scheduler\n",
     "             no_valid=False, # Whether there is a validation set or not\n",
+    "             val_bs=None, # Validation batch size\n",
     "             seed=None, # Random seed\n",
     "             report_to='none', # The list of integrations to report the results and logs to. Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\",\"clearml\" and \"wandb\". Use \"all\" to report to all integrations installed, \"none\" for no integrations.\n",
     "             trainer_class=None, # You can include the class name of your custom trainer here\n",
@@ -633,7 +634,7 @@
     "    \"The main model training/finetuning function\"\n",
     "    torch.cuda.empty_cache()\n",
     "    gc.collect()\n",
-    "    \n",
+    "    if val_bs is None: val_bs = bs\n",
     "    if seed:\n",
     "        seed_everything(seed)\n",
     "        \n",
@@ -649,7 +650,7 @@
     "                                overwrite_output_dir=True,\n",
     "                                gradient_accumulation_steps=grad_accum_steps,\n",
     "                                per_device_train_batch_size=bs, \n",
-    "                                per_device_eval_batch_size=bs,\n",
+    "                                per_device_eval_batch_size=val_bs,\n",
     "                                num_train_epochs=epochs, weight_decay=wd,\n",
     "                                report_to=report_to,\n",
     "                                logging_dir=os.path.join(o_dir, 'log') if report_to!='none' else None,\n",
@@ -691,7 +692,7 @@
        ">                save_checkpoint=False, model=None, model_init=None,\n",
        ">                data_collator=None, compute_metrics=None, grad_accum_steps=2,\n",
        ">                lr_scheduler_type='cosine', warmup_ratio=0.1, no_valid=False,\n",
-       ">                seed=None, report_to='none', trainer_class=None)\n",
+       ">                val_bs=None, seed=None, report_to='none', trainer_class=None)\n",
        "\n",
        "The main model training/finetuning function\n",
        "\n",
@@ -713,6 +714,7 @@
        "| lr_scheduler_type | str | cosine | The scheduler type to use. Including: linear, cosine, cosine_with_restarts, polynomial, constant, constant_with_warmup |\n",
        "| warmup_ratio | float | 0.1 | The warmup ratio for some lr scheduler |\n",
        "| no_valid | bool | False | Whether there is a validation set or not |\n",
+       "| val_bs | NoneType | None | Validation batch size |\n",
        "| seed | NoneType | None | Random seed |\n",
        "| report_to | str | none | The list of integrations to report the results and logs to. Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\",\"clearml\" and \"wandb\". Use \"all\" to report to all integrations installed, \"none\" for no integrations. |\n",
        "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |"
@@ -728,7 +730,7 @@
        ">                save_checkpoint=False, model=None, model_init=None,\n",
        ">                data_collator=None, compute_metrics=None, grad_accum_steps=2,\n",
        ">                lr_scheduler_type='cosine', warmup_ratio=0.1, no_valid=False,\n",
-       ">                seed=None, report_to='none', trainer_class=None)\n",
+       ">                val_bs=None, seed=None, report_to='none', trainer_class=None)\n",
        "\n",
        "The main model training/finetuning function\n",
        "\n",
@@ -750,6 +752,7 @@
        "| lr_scheduler_type | str | cosine | The scheduler type to use. Including: linear, cosine, cosine_with_restarts, polynomial, constant, constant_with_warmup |\n",
        "| warmup_ratio | float | 0.1 | The warmup ratio for some lr scheduler |\n",
        "| no_valid | bool | False | Whether there is a validation set or not |\n",
+       "| val_bs | NoneType | None | Validation batch size |\n",
        "| seed | NoneType | None | Random seed |\n",
        "| report_to | str | none | The list of integrations to report the results and logs to. Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\",\"clearml\" and \"wandb\". Use \"all\" to report to all integrations installed, \"none\" for no integrations. |\n",
        "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |"
@@ -1024,6 +1027,7 @@
     "            metric_funcs=[accuracy_score], # A list of metric functions (can be from Sklearn)\n",
     "            metric_types=[], # A list of metric types (`classification` or `regression`) that matches with the metric function list\n",
     "            batch_size=16, # Batch size\n",
+    "            val_batch_size=None, # Validation batch size. Set to batch_size if None\n",
     "            weight_decay=0.01, # Weight decay\n",
     "            lr_scheduler_type='cosine', # The scheduler type to use. Including: linear, cosine, cosine_with_restarts, polynomial, constant, constant_with_warmup\n",
     "            warmup_ratio=0.1, # The warmup ratio for some lr scheduler\n",
@@ -1045,6 +1049,8 @@
     "            \n",
     "        if label_names is None: label_names=check_and_get_attribute(self.data_store,'label_names')\n",
     "        label_names = val2iterable(label_names)\n",
+    "        \n",
+    "        if val_batch_size is None: val_batch_size=batch_size\n",
     "        \n",
     "        if head_sizes is None: \n",
     "            head_sizes=check_and_get_attribute(self.data_store,'label_lists')\n",
@@ -1072,6 +1078,7 @@
     "                           lr_scheduler_type=lr_scheduler_type,\n",
     "                           warmup_ratio=warmup_ratio,\n",
     "                           no_valid=no_valid,\n",
+    "                           val_bs=val_batch_size,\n",
     "                           seed=self.seed,\n",
     "                           trainer_class=trainer_class,\n",
     "                           report_to=hf_report_to)\n",
@@ -1250,7 +1257,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L384){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L385){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController\n",
        "\n",
@@ -1267,7 +1274,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L384){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L385){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController\n",
        "\n",
@@ -1301,20 +1308,20 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L394){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L395){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.fit\n",
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7fae4c47fd90>], metric_types=[], batch_size=16,\n",
-       ">                           weight_decay=0.01, lr_scheduler_type='cosine',\n",
-       ">                           warmup_ratio=0.1, o_dir='./tmp_weights',\n",
-       ">                           save_checkpoint=False, hf_report_to='none',\n",
-       ">                           compute_metrics=None, grad_accum_steps=2,\n",
-       ">                           tokenizer=None, data_collator=None,\n",
-       ">                           label_names=None, head_sizes=None,\n",
-       ">                           trainer_class=None)\n",
+       ">                           0x7f1dcf3b4280>], metric_types=[], batch_size=16,\n",
+       ">                           val_batch_size=None, weight_decay=0.01,\n",
+       ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
+       ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
+       ">                           hf_report_to='none', compute_metrics=None,\n",
+       ">                           grad_accum_steps=2, tokenizer=None,\n",
+       ">                           data_collator=None, label_names=None,\n",
+       ">                           head_sizes=None, trainer_class=None)\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -1324,6 +1331,7 @@
        "| metric_funcs | list | [<function accuracy_score>] | A list of metric functions (can be from Sklearn) |\n",
        "| metric_types | list | [] | A list of metric types (`classification` or `regression`) that matches with the metric function list |\n",
        "| batch_size | int | 16 | Batch size |\n",
+       "| val_batch_size | NoneType | None | Validation batch size. Set to batch_size if None |\n",
        "| weight_decay | float | 0.01 | Weight decay |\n",
        "| lr_scheduler_type | str | cosine | The scheduler type to use. Including: linear, cosine, cosine_with_restarts, polynomial, constant, constant_with_warmup |\n",
        "| warmup_ratio | float | 0.1 | The warmup ratio for some lr scheduler |\n",
@@ -1341,20 +1349,20 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L394){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L395){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.fit\n",
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7fae4c47fd90>], metric_types=[], batch_size=16,\n",
-       ">                           weight_decay=0.01, lr_scheduler_type='cosine',\n",
-       ">                           warmup_ratio=0.1, o_dir='./tmp_weights',\n",
-       ">                           save_checkpoint=False, hf_report_to='none',\n",
-       ">                           compute_metrics=None, grad_accum_steps=2,\n",
-       ">                           tokenizer=None, data_collator=None,\n",
-       ">                           label_names=None, head_sizes=None,\n",
-       ">                           trainer_class=None)\n",
+       ">                           0x7f1dcf3b4280>], metric_types=[], batch_size=16,\n",
+       ">                           val_batch_size=None, weight_decay=0.01,\n",
+       ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
+       ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
+       ">                           hf_report_to='none', compute_metrics=None,\n",
+       ">                           grad_accum_steps=2, tokenizer=None,\n",
+       ">                           data_collator=None, label_names=None,\n",
+       ">                           head_sizes=None, trainer_class=None)\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -1364,6 +1372,7 @@
        "| metric_funcs | list | [<function accuracy_score>] | A list of metric functions (can be from Sklearn) |\n",
        "| metric_types | list | [] | A list of metric types (`classification` or `regression`) that matches with the metric function list |\n",
        "| batch_size | int | 16 | Batch size |\n",
+       "| val_batch_size | NoneType | None | Validation batch size. Set to batch_size if None |\n",
        "| weight_decay | float | 0.01 | Weight decay |\n",
        "| lr_scheduler_type | str | cosine | The scheduler type to use. Including: linear, cosine, cosine_with_restarts, polynomial, constant, constant_with_warmup |\n",
        "| warmup_ratio | float | 0.1 | The warmup ratio for some lr scheduler |\n",
@@ -1398,7 +1407,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L454){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L459){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_text\n",
        "\n",
@@ -1410,7 +1419,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L454){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L459){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_text\n",
        "\n",
@@ -1439,7 +1448,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L475){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L480){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_dset\n",
        "\n",
@@ -1451,7 +1460,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L475){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L480){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_dset\n",
        "\n",
@@ -1480,7 +1489,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L498){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L503){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_ddict\n",
        "\n",
@@ -1511,7 +1520,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L498){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L503){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_ddict\n",
        "\n",
