--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -36,6 +36,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It is advised that you manually install torch (with your compatible cuda version if you GPU). Typically it's\n",
+    "\n",
+    "```sh\n",
+    "pip3 install torch --index-url https://download.pytorch.org/whl/cu118\n",
+    "```\n",
+    "\n",
+    "Visit [Pytorch page](https://pytorch.org/) for more information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# High-Level Overview"
    ]
   },
