fix verbose setting, and model lm main doc

--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -1102,12 +1102,8 @@
     "        self.cols_to_keep = cols_to_keep\n",
     "        \n",
     "        self.ddict_rest = DatasetDict()\n",
-    "        self.verbose = verbose\n",
-    "        self.verboseprint = print if verbose else lambda *a, **k: None\n",
-    "        if not self.verbose:\n",
-    "            disable_progress_bar() # turn off huggingface `map` progress bar\n",
-    "        else:\n",
-    "            enable_progress_bar()\n",
+    "        self.set_verbose(verbose)\n",
+    "        \n",
     "        if hasattr(inp,'keys'): # is datasetdict\n",
     "            if 'train' in inp.keys(): \n",
     "                self.ddict_rest = inp\n",
@@ -1153,6 +1149,10 @@
     "    def set_verbose(self,verbose):\n",
     "        self.verbose = verbose\n",
     "        self.verboseprint = print if verbose else lambda *a, **k: None\n",
+    "        if not self.verbose:\n",
+    "            disable_progress_bar() # turn off huggingface `map` progress bar\n",
+    "        else:\n",
+    "            enable_progress_bar()\n",
     "    \n",
     "    def _convert_regression_to_float(self):\n",
     "        if len(self.sup_types)==0: return\n",
