--- a/nbs/03_model_main.ipynb
+++ b/nbs/03_model_main.ipynb
@@ -1314,7 +1314,7 @@
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7f1dcf3b4280>], metric_types=[], batch_size=16,\n",
+       ">                           0x7f42772a44c0>], metric_types=[], batch_size=16,\n",
        ">                           val_batch_size=None, weight_decay=0.01,\n",
        ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
        ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
@@ -1355,7 +1355,7 @@
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7f1dcf3b4280>], metric_types=[], batch_size=16,\n",
+       ">                           0x7f42772a44c0>], metric_types=[], batch_size=16,\n",
        ">                           val_batch_size=None, weight_decay=0.01,\n",
        ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
        ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
