add seperator for metadatas to main class

--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -107,7 +107,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L17){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### tokenizer_explain\n",
        "\n",
@@ -124,7 +124,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L17){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### tokenizer_explain\n",
        "\n",
@@ -377,7 +377,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L37){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L38){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### two_steps_tokenization_explain\n",
        "\n",
@@ -396,7 +396,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L37){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L38){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### two_steps_tokenization_explain\n",
        "\n",
@@ -746,7 +746,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L66){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L67){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### tokenize_function\n",
        "\n",
@@ -756,7 +756,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L66){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L67){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### tokenize_function\n",
        "\n",
@@ -959,7 +959,7 @@
     "                     main_text, # Text feature name\n",
     "                     metadatas, # Metadata (or a list of metadatas)\n",
     "                     process_metas=True, # Whether apply simple metadata processing, i.e. space strip and lowercase\n",
-    "                     sep='.', # separator for contatenating to main_text\n",
+    "                     sep='.', # Separator, for multiple metadatas concatenation\n",
     "                     is_batched=True, # whether batching is applied\n",
     "                    ):\n",
     "    \"\"\"\n",
@@ -989,7 +989,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L100){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L101){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### concat_metadatas\n",
        "\n",
@@ -1004,13 +1004,13 @@
        "| main_text |  |  | Text feature name |\n",
        "| metadatas |  |  | Metadata (or a list of metadatas) |\n",
        "| process_metas | bool | True | Whether apply simple metadata processing, i.e. space strip and lowercase |\n",
-       "| sep | str | . | separator for contatenating to main_text |\n",
+       "| sep | str | . | Separator, for multiple metadatas concatenation |\n",
        "| is_batched | bool | True | whether batching is applied |"
       ],
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L100){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L101){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### concat_metadatas\n",
        "\n",
@@ -1025,7 +1025,7 @@
        "| main_text |  |  | Text feature name |\n",
        "| metadatas |  |  | Metadata (or a list of metadatas) |\n",
        "| process_metas | bool | True | Whether apply simple metadata processing, i.e. space strip and lowercase |\n",
-       "| sep | str | . | separator for contatenating to main_text |\n",
+       "| sep | str | . | Separator, for multiple metadatas concatenation |\n",
        "| is_batched | bool | True | whether batching is applied |"
       ]
      },
@@ -1063,6 +1063,7 @@
     "                 label_tfm_dict={}, # A dictionary: {label_name: transform_function_for_that_label}\n",
     "                 metadatas=[], # Names of the metadata columns\n",
     "                 process_metas=True, # Whether to do simple text processing on the chosen metadatas\n",
+    "                 metas_sep='.', # Separator, for multiple metadatas concatenation\n",
     "                 content_transformations=[], # A list of text transformations\n",
     "                 val_ratio:int|float|None=0.2, # Ratio of data for validation set\n",
     "                 stratify_cols=[], # Column(s) needed to do stratified shuffle split\n",
@@ -1086,6 +1087,7 @@
     "        self.label_tfm_dict = label_tfm_dict\n",
     "        self.metadatas = val2iterable(metadatas)\n",
     "        self.process_metas = process_metas\n",
+    "        self.metas_sep = metas_sep\n",
     "        \n",
     "        self.content_tfms = val2iterable(content_transformations)\n",
     "        \n",
@@ -1237,6 +1239,7 @@
     "                               main_text=self.main_text,\n",
     "                               metadatas=self.metadatas,\n",
     "                               process_metas=self.process_metas,\n",
+    "                               sep=metas_sep,\n",
     "                               is_batched=self.is_batched)\n",
     "            dset = hf_map_dset(dset,map_func,self.is_batched,self.batch_size,self.num_proc)\n",
     "            if ddict_rest is not None:\n",
@@ -1683,14 +1686,14 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L124){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L125){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController\n",
        "\n",
        ">      TextDataController (inp, main_text:str, label_names=[], sup_types=[],\n",
        ">                          class_names_predefined=[], filter_dict={},\n",
        ">                          label_tfm_dict={}, metadatas=[], process_metas=True,\n",
-       ">                          content_transformations=[],\n",
+       ">                          metas_sep='.', content_transformations=[],\n",
        ">                          val_ratio:int|float|None=0.2, stratify_cols=[],\n",
        ">                          upsampling_list={}, content_augmentations=[],\n",
        ">                          seed=None, batch_size=1024, num_proc=4,\n",
@@ -1709,6 +1712,7 @@
        "| label_tfm_dict | dict | {} | A dictionary: {label_name: transform_function_for_that_label} |\n",
        "| metadatas | list | [] | Names of the metadata columns |\n",
        "| process_metas | bool | True | Whether to do simple text processing on the chosen metadatas |\n",
+       "| metas_sep | str | . | Separator, for multiple metadatas concatenation |\n",
        "| content_transformations | list | [] | A list of text transformations |\n",
        "| val_ratio | int \\| float \\| None | 0.2 | Ratio of data for validation set |\n",
        "| stratify_cols | list | [] | Column(s) needed to do stratified shuffle split |\n",
@@ -1723,14 +1727,14 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L124){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L125){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController\n",
        "\n",
        ">      TextDataController (inp, main_text:str, label_names=[], sup_types=[],\n",
        ">                          class_names_predefined=[], filter_dict={},\n",
        ">                          label_tfm_dict={}, metadatas=[], process_metas=True,\n",
-       ">                          content_transformations=[],\n",
+       ">                          metas_sep='.', content_transformations=[],\n",
        ">                          val_ratio:int|float|None=0.2, stratify_cols=[],\n",
        ">                          upsampling_list={}, content_augmentations=[],\n",
        ">                          seed=None, batch_size=1024, num_proc=4,\n",
@@ -1749,6 +1753,7 @@
        "| label_tfm_dict | dict | {} | A dictionary: {label_name: transform_function_for_that_label} |\n",
        "| metadatas | list | [] | Names of the metadata columns |\n",
        "| process_metas | bool | True | Whether to do simple text processing on the chosen metadatas |\n",
+       "| metas_sep | str | . | Separator, for multiple metadatas concatenation |\n",
        "| content_transformations | list | [] | A list of text transformations |\n",
        "| val_ratio | int \\| float \\| None | 0.2 | Ratio of data for validation set |\n",
        "| stratify_cols | list | [] | Column(s) needed to do stratified shuffle split |\n",
@@ -1780,7 +1785,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L560){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L562){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.do_all_preprocessing\n",
        "\n",
@@ -1793,7 +1798,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L560){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L562){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.do_all_preprocessing\n",
        "\n",
@@ -1823,7 +1828,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L610){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L612){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.do_tokenization\n",
        "\n",
@@ -1840,7 +1845,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L610){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L612){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.do_tokenization\n",
        "\n",
@@ -1874,7 +1879,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L641){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L643){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.process_and_tokenize\n",
        "\n",
@@ -1896,7 +1901,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L641){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L643){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.process_and_tokenize\n",
        "\n",
