--- a/nbs/00_text_main_lm.ipynb
+++ b/nbs/00_text_main_lm.ipynb
@@ -83,6 +83,7 @@
     "                 filter_dict={}, # A dictionary: {feature: filtering_function_for_that_feature}\n",
     "                 metadatas=[], # Names of the metadata columns\n",
     "                 process_metas=True, # Whether to do simple text processing on the chosen metadatas\n",
+    "                 metas_sep='.', # Separator, for multiple metadatas concatenation\n",
     "                 content_transformations=[], # A list of text transformations\n",
     "                 val_ratio:int|float|None=0.2, # Ratio of data for validation set\n",
     "                 stratify_cols=[], # Column(s) needed to do stratified shuffle split\n",
@@ -97,6 +98,7 @@
     "                         filter_dict=filter_dict,\n",
     "                         metadatas=metadatas,\n",
     "                         process_metas=process_metas,\n",
+    "                         metas_sep=metas_sep,\n",
     "                         content_transformations=content_transformations,\n",
     "                         val_ratio=val_ratio,\n",
     "                         stratify_cols=stratify_cols,\n",
@@ -360,12 +362,13 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main_lm.py#L17){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main_lm.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataLMController\n",
        "\n",
        ">      TextDataLMController (inp, main_text:str, filter_dict={}, metadatas=[],\n",
-       ">                            process_metas=True, content_transformations=[],\n",
+       ">                            process_metas=True, metas_sep='.',\n",
+       ">                            content_transformations=[],\n",
        ">                            val_ratio:int|float|None=0.2, stratify_cols=[],\n",
        ">                            seed=None, batch_size=1024, num_proc=4,\n",
        ">                            cols_to_keep=None, verbose=True)\n",
@@ -379,6 +382,7 @@
        "| filter_dict | dict | {} | A dictionary: {feature: filtering_function_for_that_feature} |\n",
        "| metadatas | list | [] | Names of the metadata columns |\n",
        "| process_metas | bool | True | Whether to do simple text processing on the chosen metadatas |\n",
+       "| metas_sep | str | . | Separator, for multiple metadatas concatenation |\n",
        "| content_transformations | list | [] | A list of text transformations |\n",
        "| val_ratio | int \\| float \\| None | 0.2 | Ratio of data for validation set |\n",
        "| stratify_cols | list | [] | Column(s) needed to do stratified shuffle split |\n",
@@ -391,12 +395,13 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main_lm.py#L17){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main_lm.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataLMController\n",
        "\n",
        ">      TextDataLMController (inp, main_text:str, filter_dict={}, metadatas=[],\n",
-       ">                            process_metas=True, content_transformations=[],\n",
+       ">                            process_metas=True, metas_sep='.',\n",
+       ">                            content_transformations=[],\n",
        ">                            val_ratio:int|float|None=0.2, stratify_cols=[],\n",
        ">                            seed=None, batch_size=1024, num_proc=4,\n",
        ">                            cols_to_keep=None, verbose=True)\n",
@@ -410,6 +415,7 @@
        "| filter_dict | dict | {} | A dictionary: {feature: filtering_function_for_that_feature} |\n",
        "| metadatas | list | [] | Names of the metadata columns |\n",
        "| process_metas | bool | True | Whether to do simple text processing on the chosen metadatas |\n",
+       "| metas_sep | str | . | Separator, for multiple metadatas concatenation |\n",
        "| content_transformations | list | [] | A list of text transformations |\n",
        "| val_ratio | int \\| float \\| None | 0.2 | Ratio of data for validation set |\n",
        "| stratify_cols | list | [] | Column(s) needed to do stratified shuffle split |\n",
